[package]
name = "rust-multithread-job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"
crossbeam-utils = "0.8.7"

[dev-dependencies]
rand = { version = "0.8.5", default-features=false, features = ["small_rng"] }
